added about section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Vote for #SendToTwitter</a>
                     </li>
                 </ul>
             </div>
@@ -71,7 +71,7 @@
                     <div class="header-content">
                         <div class="header-content-inner">
                             <h1>Would you like to be more zen?</h1>
-                            <h2>I can help you. Right on your phone. Right there on your twitter. Just click here to join.</h2>
+                            <h2>I can help you. Right on your phone. Right there on your twitter. Just click here to join me in this journey.</h2>
                             <h2>Do it. Now.</h2>
                             <div class="send-to-twitter" user-id="872171959026503680"></div>
                         </div>
@@ -95,6 +95,24 @@
             </div>
         </div>
     </header>
+
+    <section id="about" class="download bg-primary text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1 class="section-heading">Vote for #SendToTwitter</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>&copy; Blah.</p>
+            <ul class="list-inline">
+            </ul>
+        </div>
+    </footer>
+
 
     <!-- jQuery -->
     <script src="lib/jquery/jquery.min.js"></script>
