--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 <body id="page-top">
     <script id="sent-to-twitter-sdk" src="https://agalatan.github.io/TestPage/sttsdk.js"></script>
 
-
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -70,8 +69,8 @@
 
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Would you like to be more zen?</h1>
-                            <h2>I can help you. Right on your phone. Right there on your twitter. Just click here to join me in this journey.</h2>
+                            <h1>Would you like to be zen?</h1>
+                            <h2>I can help you. Right here on your phone. Right there on your twitter. Just click here to join me in this journey.</h2>
                             <h2>Do it. Now.</h2>
                             <div class="send-to-twitter" user-id="872171959026503680"></div>
                         </div>
@@ -83,10 +82,29 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/zengreg-small.jpg" class="img-responsive" alt="">
-                                </div>
-                                <div class="button">
-                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                                    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
+                                        <ol class="carousel-indicators">
+                                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                                        </ol>
+                                        <div class="carousel-inner">
+                                            <div class="item active">
+                                              <img src="img/zengreg-small.jpg" class="img-responsive" alt="">
+                                            </div>
+                                            <div class="item">
+                                              <img src="img/yeswezen.jpg" class="img-responsive" alt="">
+                                            </div>
+                                      </div>
+                                      <!-- Left and right controls -->
+                                      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                                        <span class="glyphicon glyphicon-chevron-left"></span>
+                                        <span class="sr-only">Previous</span>
+                                      </a>
+                                      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                                        <span class="glyphicon glyphicon-chevron-right"></span>
+                                        <span class="sr-only">Next</span>
+                                      </a>
+                                    </div>                                    
                                 </div>
                             </div>
                         </div>
