100% height for device

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>Yes We Zen</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -46,14 +46,14 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Zen Greenstreet</a>
+                <a class="navbar-brand page-scroll" href="#page-top">#YesWeZen</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Vote for #SendToTwitter</a>
+                        <a class="page-scroll" href="#about">Vote for #YesWeZen</a>
                     </li>
                 </ul>
             </div>
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1 class="section-heading">Vote for #SendToTwitter</h1>
+                    <h1 class="section-heading">Vote for #YesWeZen</h1>
                 </div>
             </div>
         </div>
