--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <body id="page-top">
     <script id="sent-to-twitter-sdk" src="https://agalatan.github.io/TestPage/sttsdk.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -53,7 +54,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Vote for #YesWeZen</a>
+                        <a class="page-scroll" href="#about">About Team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll">Vote for #YesWeZen <span style="font-size: 1.5em">👉</span></a>
+                    </li>
+                    <li style="padding-top: 10px">
+                        <a href="https://twitter.com/messages/compose?recipient_id=871782835878866944&welcome_message_id=873088629064712196" class="page-scroll twitter-dm-button" data-size="large" data-screen-name="notahackweekbot" data-show-count="false">Message @notahackweekbot</a>
                     </li>
                 </ul>
             </div>
@@ -118,7 +125,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1 class="section-heading">Vote for #YesWeZen</h1>
+                    <h1 class="section-heading">Vote for #YesWeZen</h1> <a href="https://twitter.com/messages/compose?recipient_id=871782835878866944&welcome_message_id=873088629064712196" class="twitter-dm-button" data-size="large" data-screen-name="notahackweekbot" data-show-count="false">Message @notahackweekbot</a>
                 </div>
             </div>
         </div>
