--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="page-scroll">Vote for #YesWeZen <span style="font-size: 1.5em">👉</span></a>
                     </li>
                     <li style="padding-top: 10px">
-                        <a href="https://twitter.com/messages/compose?recipient_id=871782835878866944&welcome_message_id=873088629064712196" class="page-scroll twitter-dm-button" data-size="large" data-screen-name="notahackweekbot" data-show-count="false">Message @notahackweekbot</a>
+                        <a href="https://twitter.com/messages/compose?recipient_id=871782835878866944&welcome_message_id=873088629064712196" class="page-scroll twitter-dm-button" data-size="large" data-screen-name="notahackweekbot" data-welcome-message-id="873088629064712196" data-show-count="false">Message @notahackweekbot</a>
                     </li>
                 </ul>
             </div>
