--- a/index.html
+++ b/index.html
@@ -125,14 +125,29 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1 class="section-heading">Vote for #YesWeZen</h1> <a href="https://twitter.com/messages/compose?recipient_id=871782835878866944&welcome_message_id=873088629064712196" class="twitter-dm-button" data-size="large" data-screen-name="notahackweekbot" data-show-count="false">Message @notahackweekbot</a>
+                    <h1 class="section-heading">About the Team</h1>
                 </div>
-            </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2">
+                        <img src="img/ttong.jpg" style="height: 256px; width: 256px;" alt="">
+                    </div>
+                    <div class="col-md-2 col-md-offset-1">
+                        <img src="img/agalatan.jpg"  style="height: 256px; width: 256px" alt="">
+                    </div>
+                    <div class="col-md-2 col-md-offset-1">
+                        <img src="img/avirmani.jpg"   style="height: 256px; width: 256px" alt="">
+                    </div>
+                    <div class="col-md-2 col-md-offset-1">
+                        <img src="img/ssaengsuwarn.jpg"  style="height: 256px; width: 256px" alt="">
+                    </div>
+                </div>
         </div>
     </section>
     <footer>
         <div class="container">
-            <p>&copy; Blah.</p>
+            <p>Vote for #YesWeZen</p>
+            <a href="https://twitter.com/messages/compose?recipient_id=871782835878866944&welcome_message_id=873088629064712196" class="page-scroll twitter-dm-button" data-size="large" data-screen-name="notahackweekbot" data-welcome-message-id="873088629064712196" data-show-count="false">Message @notahackweekbot</a>
             <ul class="list-inline">
             </ul>
         </div>
