--- a/index.html
+++ b/index.html
@@ -129,17 +129,23 @@
                 </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2">
+                    <div class="col-md-4">
                         <img src="img/ttong.jpg" style="height: 256px; width: 256px;" alt="">
                     </div>
-                    <div class="col-md-2 col-md-offset-1">
+                    <div class="col-md-4">
                         <img src="img/agalatan.jpg"  style="height: 256px; width: 256px" alt="">
                     </div>
-                    <div class="col-md-2 col-md-offset-1">
+                    <div class="col-md-4">
                         <img src="img/avirmani.jpg"   style="height: 256px; width: 256px" alt="">
                     </div>
-                    <div class="col-md-2 col-md-offset-1">
+                </div>
+                <br/>
+                <div class="row">
+                    <div class="col-md-4">
                         <img src="img/ssaengsuwarn.jpg"  style="height: 256px; width: 256px" alt="">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="img/ayang.jpg"  style="height: 256px; width: 256px" alt="">
                     </div>
                 </div>
         </div>
